2006-01-16  Paul Brook  <paul@codesourcery.com>

	* gas/m68k/all.exp: Add mcf-fpu.
	* gas/m68k/mcf-fpu.d: New file.
	* gas/m68k/mcf-fpu.s: New file.

2006-01-11  Nick Clifton  <nickc@redhat.com>

	* gas/tic54x/address.d: Work with 64bit hosts.
	* gas/tic54x/addrfar.d: Likewise.
	* gas/tic54x/align.d: Likewise.
	* gas/tic54x/all-opcodes.d: Likewise.
	* gas/tic54x/asg.d: Likewise.
	* gas/tic54x/cons.d: Likewise.
	* gas/tic54x/consfar.d: Likewise.
	* gas/tic54x/extaddr.d: Likewise.
	* gas/tic54x/field.d: Likewise.
	* gas/tic54x/labels.d: Likewise.
	* gas/tic54x/loop.d: Likewise.
	* gas/tic54x/lp.d: Likewise.
	* gas/tic54x/macro.d: Likewise.
	* gas/tic54x/math.d: Likewise.
	* gas/tic54x/opcodes.d: Likewise.
	* gas/tic54x/sections.d: Likewise.
	* gas/tic54x/set.d: Likewise.
	* gas/tic54x/struct.d: Likewise.
	* gas/tic54x/subsym.d: Likewise.

2006-01-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/2117
	* gas/ia64/ia64.exp: Add ltoff22x-2, ltoff22x-3, ltoff22x-4 and
	ltoff22x-5.

	* gas/ia64/ltoff22x-2.d: New file.
	* gas/ia64/ltoff22x-2.s: Likewise.
	* gas/ia64/ltoff22x-3.d: Likewise.
	* gas/ia64/ltoff22x-3.s: Likewise.
	* gas/ia64/ltoff22x-4.d: Likewise.
	* gas/ia64/ltoff22x-4.s: Likewise.
	* gas/ia64/ltoff22x-5.d: Likewise.
	* gas/ia64/ltoff22x-5.s: Likewise.

2006-01-03  Hans-Peter Nilsson  <hp@bitrange.com>

	PR gas/2101
	* gas/mmix/hex2.s, gas/mmix/hex2.d: New test.

For older changes see ChangeLog-2005

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: