@@ -7,4 +7,6 @@ if [istarget z80-*-*] then {
     run_dump_test "quotes"
 # test suffixes
     run_dump_test "suffix"
+# test assembling and disassembling insturction involving offsets
+    run_dump_test "offset"
 }
