@@ -1,3 +1,9 @@
+2006-01-18  Arnold Metselaar  <arnoldm@sourceware.org>
+
+	* gas/z80/z80.exp: Add offset.
+	* gas/z80/ofseet.d: New file.
+	* gas/z80/ofseet.s: New file.
+
 2006-01-16  Paul Brook  <paul@codesourcery.com>
 
 	* gas/m68k/all.exp: Add mcf-fpu.
